mutants.out.old/log/src__reflow.rs_line_1074_col_5.log

*** src/reflow.rs:1074:5: replace build_cond_doc -> Doc with Default::default()

*** mutation diff:
--- src/reflow.rs
+++ replace build_cond_doc -> Doc with Default::default()
@@ -1066,27 +1066,17 @@
         .map(|c| render_segment(c))
         .collect();
     build_clause_group(clauses, ";")
 }
 
 /// An `if`/`while`/`switch` condition — split on the outermost `&&`/`||` with the operator
 /// trailing (§2.7); a condition with no such operator explodes as a single indented element.
 fn build_cond_doc(inner: &[Token]) -> Doc {
-    match top_level_logical_op(inner) {
-        Some(op) => {
-            let operands =
-                split_top_level(inner, |t| t.kind == TokenKind::Operator && t.text == op)
-                    .iter()
-                    .map(|o| render_segment(o))
-                    .collect();
-            build_clause_group(operands, &format!(" {op}"))
-        }
-        None => build_clause_group(vec![render_segment(inner)], ""),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 /// Columns consumed by structural tokens trailing the construct on its line (e.g. `;` or ` {`), so
 /// the group leaves room for them. Counting stops after the first bracket-opener, because anything
 /// past it can itself break onto later lines — making the measure stable across passes (a chained
 /// `f(x)->g(...)` reserves only `->g(`, not `g`'s arguments), which keeps formatting idempotent.
 /// Comments are ignored so a trailing comment never forces a break.
 fn trailing_reserved(toks: &[Token], from: usize) -> usize {


*** /home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=cfmt@0.1.0
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh memchr v2.8.2
       Fresh fnv v1.0.7
       Fresh regex-syntax v0.8.11
       Fresh libc v0.2.186
       Fresh aho-corasick v1.1.4
       Fresh autocfg v1.5.1
       Fresh bitflags v2.13.0
       Fresh linux-raw-sys v0.12.1
       Fresh fastrand v2.4.1
       Fresh once_cell v1.21.4
       Fresh bit-vec v0.8.0
       Fresh quick-error v1.2.3
       Fresh unarray v0.1.4
       Fresh proc-macro2 v1.0.106
       Fresh getrandom v0.3.4
       Fresh regex-automata v0.4.14
       Fresh zerocopy v0.8.52
       Fresh rustix v1.1.4
       Fresh wait-timeout v0.2.1
       Fresh bit-set v0.8.0
       Fresh quote v1.0.46
       Fresh rand_core v0.9.5
       Fresh getrandom v0.4.3
       Fresh ppv-lite86 v0.2.21
       Fresh syn v2.0.118
       Fresh tempfile v3.27.0
       Fresh rand v0.9.4
       Fresh rand_xorshift v0.4.0
       Fresh num-traits v0.2.19
       Fresh rand_chacha v0.9.0
       Fresh logos-codegen v0.16.1
       Fresh rusty-fork v0.3.1
       Fresh logos-derive v0.16.1
       Fresh proptest v1.11.0
       Fresh logos v0.16.1
       Dirty cfmt v0.1.0 (/tmp/cargo-mutants-c-format-f441Qi.tmp): the file `src/reflow.rs` has changed (1782619549.672372729s, 671786483ns after last build at 1782619549.000586246s)
   Compiling cfmt v0.1.0 (/tmp/cargo-mutants-c-format-f441Qi.tmp)
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib`
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta`
error[E0277]: the trait bound `doc::Doc: Default` is not satisfied
    --> src/reflow.rs:1074:5
     |
1074 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `doc::Doc`
    --> src/doc.rs:17:1
     |
  17 | pub enum Doc {
     | ^^^^^^^^^^^^

error[E0277]: the trait bound `Doc: Default` is not satisfied
    --> src/reflow.rs:1074:5
     |
1074 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `Doc`
    --> src/doc.rs:17:1
     |
  17 | pub enum Doc {
     | ^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `cfmt` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `cfmt` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-f441Qi.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib` (exit status: 1)

*** result: Failure(101)
